--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .canvas__container {
+            width: 100%;
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-
+<div class="canvas__container">
+</div>
 </body>
 </html>
