--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-
-        .canvas__container {
-            width: 100%;
-            height: 100vh;
-        }
-    </style>
 </head>
 <body>
+<div class="legend">
+    <ul>
+        <li>
+            <b>RMS (Root Mean Square)</b> – Показатель "силы" звука (среднеквадратичная сумма дискретных длинн волн звукового спектра.)
+        </li>
+        <li>
+            <b>MaxAvgVol</b> - Максимальное значение RMS за одну сессию.
+        </li>
+        <li>
+            <b>CurrAvgVol</b> - Значение RMS в момент времени.
+        </li>
+    </ul>
+</div>
+<div class="tableContainer">
+    <table class="table-fill">
+        <thead>
+        <tr>
+            <th>Date</th>
+            <th>value (RMS)</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+    <button class="save">Save maxAvgVol</button>
+    <button class="clear">Clear table</button>
+</div>
 <div class="canvas__container">
 </div>
 </body>
