add start record action button

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     </table>
     <button class="save">Save maxAvgVol</button>
     <button class="clear">Clear table</button>
+    <button class="start">Start record</button>
 </div>
 <div class="canvas__container">
 </div>
